[package]
name = "api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.95"
tui-textarea = "0.7.0"
syntect = "5.3.0"
